tests/NormalTests/paczka1/small_fuzzy/97323452.err
Error in line 4: tOHO7LX S841 42,4
Error in line 12: tOHO7LX S725 63,38
